fix: api 로직 수정